--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>account-service</artifactId>
-
+xxxx
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
