--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<groupId>pl.piomin</groupId>
 	<artifactId>sample-spring-microservices</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-xxx
+	<packaging>pom</packaging
+
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-starter-parent</artifactId>
